Updated Test plan for checking Language servers (markdown)